# fastapi-otel-loki-grafana

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  __main__.py  log.py  routes.py
config/: logging_config.yaml  loki.yaml  otel-config.yaml
docker/: Dockerfile  docker-compose.yml
src/fastapi_otel_loki_grafana/: __init__.py  __main__.py  log.py  routes.py
