[project]
name = "fastapi-otel-loki-grafana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "python-json-logger>=3.3.0",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
fastapi-server = "fastapi_otel_loki_grafana:main"